fixed x overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ General
   max-width: 1000px;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 h1 {
   font-family: "Playfair Display", cursive;
 }
